Project Quotation {
    database_type: 'MySql'
}

Table users {
    id int [pk, increment]
    email varchar [not null, unique]
    password text [not null]
    role tinyint
    created_at timestamp
    update_at timestamp
}

Table materials {
    id int [pk, increment]
    name varchar [not null]
    created_at timestamp
    update_at timestamp
}

Table material_specs {
    id int [pk, increment]
    material_id int [not null, ref: > materials.id]
    spesification varchar [not null]
    created_at timestamp
    update_at timestamp
}

Table material_rate {
    id int [pk, increment]
    material_id [not null, ref: > materials.id]
    material_spec_id int [not null, ref: > material_specs.id]
    period date [not null]
    rate double [not null, default: 0]
    created_at timestamp
    update_at timestamp
}

Table process {
    id int [pk, increment]
    name varchar [not null]
    created_at timestamp
    update_at timestamp
}

Table process_code {
    id int [pk, increment]
    process_id int [not null, ref: > process.id]
    name varchar [not null]
    created_at timestamp
    update_at timestamp
}

Table process_rate {
    id int [pk, increment]
    process_id [not null, ref: > process.id]
    process_code_id int [not null, ref: > process_code.id]
    rate double [not null, default: 0]
    created_at timestamp
    update_at timestamp
}

Table currency_group {
    id [int, increment]
    name varchar [not null]
    created_at timestamp
    updated_at timestamp
}

Table currency_value {
    id int [pk, increment]
    currency_type_id tinyint [not null, note: '1 for slide and 2 for non-slide']
    currency_group_id int [not null, ref: > currency_group.id]
    period date [not null]
    value double [not null]
    created_at timestamp
    updated_at timestamp
}

Table cost {
    id int [pk, increment]
    name varchar [not null]
    number varchar [not null]
    total_cost double [not null, default: 0]
    material_cost double [not null, default: 0]
    process_cost double [not null, default: 0]
    purchase_cost double [not null, default: 0]
    created_at timestamp
    update_at timestamp
}

Table cost_material_details {
    id int [pk, increment]
    cost_id int [not null, ref > cost.id]
    part_no varchar [not null]
    part_name varchar [not null]
    material_rate_id int [not null, ref > material_rate.id]
    material_currency_value_id int [not null, ref: > currency_value.id]
    exchange_rate double [not null]
    usage_part double [not null]
    over_head double [not null]
    total double [not null]
    created_at timestamp
    update_at timestamp
}

Table cost_process_details {
    id int [pk, increment]
    cost_id int [not null, ref > cost.id]
    part_no varchar [not null]
    part_name varchar [not null]
    process_rate_id int [not null, ref > process_rate.id]
    cycle_time double [not null, default: 0]
    over_head double [not null, default: 0]
    total double [not null, default: 0]
    created_at timestamp
    update_at timestamp
}

Table cost_purchase_details {
    id int [pk, increment]
    cost_id int [not null, ref > cost.id]
    currency int [not null, ref > currency_group.id]
    currency_type int [not null, ref > currency_type.id]
    currency_value_id int [not null, ref > currency_value.id]
    part_name varchar [not null]
    part_no varchar [not null]
    over_head double [not null]
    quantity double [not null]
    total double [not null]
    created_at timestamp
    updated_at timestamp
}